2000-12-05  Lars Wirzenius  <liw@iki.fi>

	* gw/smsc.c: Removed calls to str_find_substr.
	
	* gwlib/utils.[ch]: Removed now-unused str_find_substr function.

2000-12-05  Lars Wirzenius  <liw@iki.fi>

	* gw/urltrans.[ch]: Removed urltrans_accepted_smsc(), since
	it wasn't being used. Made the accepted SMSC list in an
	URLTranslation be a List. This allows us to kill one more call
	to str_find_substr.
	
	* gwlib/octstr.[ch]: Wrote octstr_item_match.

2000-12-05  Lars Wirzenius  <liw@iki.fi>

	* gwlib/octstr.[ch]: Wrote octstr_split.
	
	* gw/urltrans.c: Use a Dict to look up the URLTranslation,
	instead of a linear search from the whole list. This is somewhat
	faster and results in cleaner code.

2000-12-05  Lars Wirzenius  <liw@iki.fi>

	* gwlib/gwstr.[ch], gwlib/conffile.c: Moved trim_ends to
	conffile.c, and the other functions were no longer used, so
	removed the gwstr module.
	
	* gwlib/gwlib.h, gwlib/socket.h: Removed include for gwstr.h.

2000-12-04  Lars Wirzenius  <liw@iki.fi>

    	* gw/urltrans.c: Made urltrans_get_pattern return an Octstr, instead
	of a C string.

	* gw/smsbox.c: Related changes.

2000-12-04  Lars Wirzenius  <liw@iki.fi>

	* gw/urltrans.[ch]: Change function call interfaces to use Octstr
	instead of C strings.

	* gw/smsbox.c: Related changes.
	
	* gw/smsbox.c: When checking whether sendsms is allowed, call
	is_allowed_ip properly, with deny_ip, not instead of allow_ip.

2000-12-04  Lars Wirzenius  <liw@iki.fi>

	* gw/urltrans.[ch]: Reformatted for new coding style.

2000-12-04  Lars Wirzenius  <liw@iki.fi>

	* gw/smsbox.c: Fixed the PAM code to use warning and error,
	instead of printf.

2000-12-04  Lars Wirzenius  <liw@iki.fi>

	* gw/smsbox.c: Reformatted the PAM code. Hopefully it still works.

2000-12-04  Lars Wirzenius  <liw@iki.fi>

	* gw/smsbox.c: Rearranged code for clarity, plugged a memory leak
	and fixed a memory freeing bug (memory was being freed twice).

2000-12-04  Lars Wirzenius  <liw@iki.fi>
