@@ -10,6 +10,21 @@
 #ifndef SHARED_H
 #define SHARED_H
 
+
+#include "msg.h"
+
+
+/*
+ * Program status. Set this to shutting_down to make read_from_bearerbox
+ * return even if the bearerbox hasn't closed the connection yet.
+ */
+extern enum program_status {
+    starting_up,
+    running,
+    shutting_down
+} program_status;
+
+
 /*
  * Return an octet string with information about Kannel version,
  * operating system, and libxml version. The caller must take care to
@@ -23,6 +38,30 @@ Octstr *version_report_string(const char *boxname);
  * files.
  */
 void report_versions(const char *boxname);
+
+
+/*
+ * Open a connection to the bearerbox.
+ */
+void connect_to_bearerbox(Octstr *host, int port);
+
+
+/*
+ * Close connection to the bearerbox.
+ */
+void close_connection_to_bearerbox(void);
+
+
+/*
+ * Receive Msg from bearerbox. Return NULL if connection broke.
+ */
+Msg *read_from_bearerbox(void);
+
+
+/*
+ * Send an Msg to the bearerbox, and destroy the Msg.
+ */
+void write_to_bearerbox(Msg *msg);
 
 
 #endif
